Add entity dialog was created. Add Camera dialog is used to specify the camera name

--- a/VirtualScene.BusinessComponents.Core/Properties/Resources.resx
+++ b/VirtualScene.BusinessComponents.Core/Properties/Resources.resx
@@ -129,4 +129,7 @@
   <data name="Message_ValidateSceneArguments_Maximum_bitDepth_value_N" xml:space="preserve">
     <value>Maximum bitDepth value: {0}</value>
   </data>
+  <data name="Title_Navigation_Camera" xml:space="preserve">
+    <value>Navigation</value>
+  </data>
 </root>
