Viewport navigation buttons reassigned. Help file and window where added.

--- a/VirtualScene.PresentationComponents.WPF/Properties/Resources.resx
+++ b/VirtualScene.PresentationComponents.WPF/Properties/Resources.resx
@@ -141,4 +141,10 @@
   <data name="Title_Add_Free_Camera" xml:space="preserve">
     <value>Add Free camera</value>
   </data>
+  <data name="Title_Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="Title_Help" xml:space="preserve">
+    <value>Help</value>
+  </data>
 </root>
