SceneViewControl become a part of the SceneViewportView. Second ApplicationPresenter instance was removed

--- a/VirtualScene.PresentationComponents.WPF/Properties/Resources.resx
+++ b/VirtualScene.PresentationComponents.WPF/Properties/Resources.resx
@@ -147,4 +147,7 @@
   <data name="Title_Help" xml:space="preserve">
     <value>Help</value>
   </data>
+  <data name="Title_Import3D_model" xml:space="preserve">
+    <value>Import 3D model</value>
+  </data>
 </root>
