Save Stage business logic was implemented. Basic data layer was added.

--- a/VirtualScene.BusinessComponents.Core/Properties/Resources.resx
+++ b/VirtualScene.BusinessComponents.Core/Properties/Resources.resx
@@ -147,4 +147,7 @@
   <data name="Message_AddMaterials_File_with_material_N_not_found" xml:space="preserve">
     <value>File with material "{0}" not found.</value>
   </data>
+  <data name="Title_Save_Stage" xml:space="preserve">
+    <value>Save Stage</value>
+  </data>
 </root>
