--- a/VirtualScene.DataComponents.Common/Properties/Resources.resx
+++ b/VirtualScene.DataComponents.Common/Properties/Resources.resx
@@ -120,9 +120,6 @@
   <data name="Message_File_was_found_when_a_directory_was_expected_in_N" xml:space="preserve">
     <value>File was found when a directory was expected in "{0}"</value>
   </data>
-  <data name="Message_A_data_adapter_for_the_type_N_is_not_registered" xml:space="preserve">
-    <value>A data-adapter for the type "{0}" is not registered.</value>
-  </data>
   <data name="Message_Save_Name_of_the_stage_is_invalid" xml:space="preserve">
     <value>Name of the stage is invalid.</value>
   </data>
@@ -161,5 +158,20 @@
   </data>
   <data name="Message_A_type_N_was_expected_by_the_following_type_was_loaded_M" xml:space="preserve">
     <value>A type \"{0}\" was expected by the following type was loaded: "{1}".</value>
+  </data>
+  <data name="Message_Folder_path_for_the_entity_is_not_defined" xml:space="preserve">
+    <value>Folder path for the entity is not defined</value>
+  </data>
+  <data name="Message_Entity_information_is_not_defined_for_the_entry_N" xml:space="preserve">
+    <value>Entity information is not defined for the entry "{0}"</value>
+  </data>
+  <data name="Message_Entity_type_information_is_not_defined_for_the_entry_N" xml:space="preserve">
+    <value>Entity-type information is not defined for the entry "{0}"</value>
+  </data>
+  <data name="Message_The_archive_N_with_a_stage_might_be_currupted_M" xml:space="preserve">
+    <value>The archive "{0}" with a stage might be currupted "{1}"</value>
+  </data>
+  <data name="Message_The_archive_N_with_a_stage_cannot_be_processed_due_to_the_error_M" xml:space="preserve">
+    <value>The archive "{0}" with a stage cannot be processed due to the error "{1}"</value>
   </data>
 </root>
