Details are shown for selected scene-entity. Names are shown in the scene-entities list. Names of the selected scene-entity can be changed in the detail-view.

--- a/VirtualScene.EntityPresentationComponents.WPF/Properties/Resources.resx
+++ b/VirtualScene.EntityPresentationComponents.WPF/Properties/Resources.resx
@@ -174,4 +174,7 @@
   <data name="Title_Cylinder" xml:space="preserve">
     <value>Cylinder</value>
   </data>
+  <data name="Title_Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
 </root>
