--- a/VirtualScene.Entities/Properties/Resources.resx
+++ b/VirtualScene.Entities/Properties/Resources.resx
@@ -120,4 +120,10 @@
   <data name="Message_TypeInfo_cannot_be_created_for_null" xml:space="preserve">
     <value>TypeInfo cannot be created for null</value>
   </data>
+  <data name="Message_Scene_entity_already_exists_in_the_stage" xml:space="preserve">
+    <value>Scene-entity already exists in the stage.</value>
+  </data>
+  <data name="Message_Scene_entity_does_not_exists_in_the_stage" xml:space="preserve">
+    <value>Scene-entity does not exists in the stage.</value>
+  </data>
 </root>
