SpurGearBuilder become instantiable. Added readonly state in SpurGear properties view. Added property PressureAngle (not functioning yet).

--- a/VirtualScene.EntityPresentationComponents.WPF/Properties/Resources.resx
+++ b/VirtualScene.EntityPresentationComponents.WPF/Properties/Resources.resx
@@ -234,4 +234,10 @@
   <data name="Title_Auxiliary_Geometry" xml:space="preserve">
     <value>Auxiliary Geometry</value>
   </data>
+  <data name="Title_Advanced" xml:space="preserve">
+    <value>Advanced</value>
+  </data>
+  <data name="Title_Pressure_Angle" xml:space="preserve">
+    <value>Pressure Angle</value>
+  </data>
 </root>
